--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="fonts/MullerRegular.woff2">
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -48,7 +49,53 @@
         </div>
         <!-- /container -->
     </header>
+    <main>
+        <div class="catalog container">
+            <aside class="catalog__aside">
+                <div class="catalog__header">Каталог</div>
+                <nav class="catalog__menu">
+                    <ul class="catalog__ul">
+                        <li><a href="#" class="active">Все товары</a></li>
+                        <li class="has-sub"><a href="#">Одежда <span class="sub-arrow"></span></a>
+                            <ul>
+                                <li><a href="#">Женская</a></li>
+                                <li><a href="#">Мужская</a></li>
+                                <li><a href="#">Детская</a></li>
+                            </ul>
+                        </li>
+                        <li class="has-sub"><a href="#">Обувь <span class="sub-arrow"></span></a>
+                            <ul>
+                                <li><a href="#">Детская</a></li>
+                                <li><a href="#">Мужская</a></li>
+                                <li><a href="#">Женская</a></li>
+                            </ul>
+                        </li>
+                        <li class="has-sub"><a href="#">Акессуары <span class="sub-arrow"></span></a>
+                            <ul>
+                                <li><a href="#">Ремни</a></li>
+                                <li><a href="#">Кошельки</a></li>
+                                <li><a href="#">Духи</a></li>
+                            </ul>
+                        </li>
+                        <li class="has-sub"><a href="#">Электроника <span class="sub-arrow"></span></a>
+                            <ul>
+                                <li><a href="#">Крупная</a></li>
+                                <li><a href="#">Мелкая</a></li>
+                            </ul>
+                        </li>
+                        <li class="has-sub"><a href="#">Другие товары <span class="sub-arrow"></span></a>
+                            <ul>
+                                <li><a href="#">Шины</a></li>
+                                <li><a href="#">Вешалки</a></li>
+                                <li><a href="#">Люстры</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </aside>
+    </main>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="scripts/jquery-3.5.1.min.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
